@@ -15,12 +15,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <compilerArgs>
-            --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
-          </compilerArgs>
+   
+<configuration>
+                   
+    <source>11</source>
+    <target>11</target>
         </configuration>
       </plugin>
     </plugins>
